--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "styled-components": "^5.3.10",
+    "typescript": "5.0.4",
+    "usehooks-ts": "^2.9.1"
   }
 }
